recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:3: error: value tail is not a member of Int
	if(l.head <= l.head.tail)
                            ^